[package]
name = "pong"
version = "0.1.0"
authors = ["ElnuDev <9874955+ElnuDev@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
hecs = "0.2.15"
rapier2d = "0.3.0"

[dependencies.nalgebra]
version = "0.23.0"
features = ["mint"]